--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit==1.29.0
-pandas==2.0.3
-matplotlib==3.7.2
-numpy==1.24.3
+streamlit>=1.29.0
+pandas>=2.1.0
+matplotlib>=3.8.0
+numpy>=1.26.0
 pydeck==0.8.1b0
