--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,8 @@ pandas>=2.1.0
 matplotlib>=3.8.0
 numpy>=1.26.0
 pydeck==0.8.1b0
+seaborn==0.13.0
+folium==0.14.0
+streamlit-folium==0.15.1
+plotly==5.18.0
+requests==2.31.0
